--- a/bower.json
+++ b/bower.json
@@ -5,27 +5,30 @@
   ],
   "license": "https://polymer.github.io/LICENSE.txt",
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#2.0-preview",
-    "app-route": "PolymerElements/app-route#2.0-preview",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview",
-    "iron-media-query": "PolymerElements/iron-media-query#2.0-preview",
-    "iron-pages": "PolymerElements/iron-pages#2.0-preview",
-    "iron-selector": "PolymerElements/iron-selector#2.0-preview",
-    "paper-icon-button": "2.0-preview",
-    "polymer": "Polymer/polymer#^2.0.0-rc.3",
+    "app-layout": "PolymerElements/app-layout",
+    "app-route": "PolymerElements/app-route#1 - 2",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#1 - 2",
+    "iron-iconset-svg": "^2.0.1",
+    "iron-media-query": "PolymerElements/iron-media-query#1 - 2",
+    "iron-pages": "PolymerElements/iron-pages#1 - 2",
+    "iron-selector": "PolymerElements/iron-selector#1 - 2",
+    "paper-icon-button": "^2.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.7",
-    "paper-button": "2.0-preview",
-    "iron-icons": "2.0-preview",
-    "paper-input": "2.0-preview",
-    "localforage": "^1.5.0",
-    "paper-toast": "2.0-preview"
-  },
-  "resolutions": {
-    "polymer": "^2.0.0-rc.3"
+    "ink-input": "H-Plus-Time/ink-input#master",
+    "paper-swatch-picker": "^2.0.1",
+    "fontawesome-iconset": "vangware/fontawesome-iconset#master",
+    "idb-keyval": "*",
+    "iron-icon": "^2.0.1",
+    "pouchdb": "^6.3.4",
+    "worker-pouch": "pouchdb-community/worker-pouch#^2.0.0",
+    "paper-fab": "^2.0.0",
+    "paper-dialog": "^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "ink-input": "master"
+  }
 }
