--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Hermes",
-  "short_name": "Hermes",
+  "name": "Inkwell",
+  "short_name": "Inkwell",
   "start_url": "./?homescreen=1",
   "display": "standalone",
-  "theme_color": "#3f51b5",
-  "background_color": "#3f51b5",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
