--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "paper-dialog": "^2.0.0",
     "paper-input": "^2.0.1",
     "paper-tabs": "^2.0.0",
-    "paper-toast": "^2.0.0"
+    "paper-toast": "^2.0.0",
+    "paper-button": "^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
